# testudo-smart-search

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: main.py  models.py  scraper.py  search.py
extension/: manifest.json
extension/background/: service_worker.js
extension/content/: content.css  content.js
extension/offscreen/: offscreen.html  offscreen.js
scripts/: download_transformers_js.py  generate_embeddings.py
